--- a/jostyle.css
+++ b/jostyle.css
@@ -1,16 +1,25 @@
+slides > slide.backdrop {
+  background: white;
+  border-bottom: 0px;
+  box-shadow: 0 0 0;
+}
+
 slides > slide {
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-  border-bottom: 3px solid #d04c29;
-  /* color: #838b93; */
-  /* color: #1e2b38; */
-  /* color: #34495e; */
-  /* box-shadow:  0 3px 0 #522D80; */
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    /* font-family: 'Open Sans', Calibri, Arial, sans-serif; */
+    /* font-family: 'Calibri', sans-serif; */
+    background: #ffffff;
+    border-bottom: 3px solid #d04c29;
+    /* color: #838b93; */
+    /* color: #1e2b38; */
+    /* color: #34495e; */
+    /* box-shadow:  0 3px 0 #838b93; */
 }
 
 /* The source code blocks */
-pre {
-    /* font-family: 'Inconsolata', sans-serif; */
-}
+/* pre { */
+/*     /\* font-family: 'Inconsolata', sans-serif; *\/ */
+/* } */
 
 h1 {
     color: #d04c29;
